<resources>
    <string name="app_name">ShopIn</string>
    <string name="rightAddress">The Right Address\nFor Shopping\nAnyday\n</string>
    <string name="quality">It is now very easy to reach the\nbest quality among the\nproducts on the iternet!\n</string>
    <string name="start">Start</string>
    <string name="register">Register</string>
    <string name="login">LogIn</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? Register</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="let_s_register">Let\'s Register</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="reset_password">Reset Password</string>
    <string name="we_will_send_you_a_link_to_reset_your_password_to_your_email">We will send you a link to reset your password to your email.</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="search_now">Search Now</string>
    <string name="_1600">$1600</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="best_deals">Best deals</string>
    <string name="best_products">Best products</string>
    <string name="scotch_premium">Scotch Premium</string>
    <string name="_2000">$2000</string>
    <string name="see_product">See product</string>
    <string name="chair">Chair</string>
    <string name="just_for_preview">Just for preview</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="s">S</string>
    <string name="_1">1</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
    <string name="check_out">Check out</string>
    <string name="your_shopping_cart_is_empty">Your shopping cart is empty!!</string>
    <string name="address">Address</string>
    <string name="location">Location</string>
    <string name="full_name">Full Name</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="phone">Phone</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="billing">Billing</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="shopin_does_not_support_virtual_payments_you_can_pay_when_you_receive_your_order">ShopIn does not support virtual payments. You can pay when you receive your order.</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="place_order">Place Order</string>
    <string name="my_account">My account</string>
    <string name="forgot_change_password">Forgot/Change password</string>
    <string name="all_orders">All orders</string>
    <string name="no_orders_to_show">No orders to show</string>
    <string name="_1234567">#1234567</string>
    <string name="products">Products</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="edit_personal_details">Edit personal details</string>
    <string name="orders">Orders</string>
    <string name="track_orders">Track Orders</string>
    <string name="notifications">Notifications</string>
    <string name="regional">Regional</string>
    <string name="logout">Logout</string>
    <string name="version_1_0">Version 1.0</string>
</resources>