<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blurry_background"
        android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:drawablePadding="6dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_app_shape"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"/>

        <TextView
            android:id="@+id/tvLetsRegister"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/let_s_register"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"/>

        <TextView
            android:id="@+id/tvAlreadyHaveAnAccount"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/already_have_an_account_log_in"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@id/tvLetsRegister"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"/>
        <EditText
            android:id="@+id/etFirstNameRegister"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="50dp"
            android:hint="@string/first_name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@id/tvAlreadyHaveAnAccount" />

        <EditText
            android:id="@+id/etLastNameRegister"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="15dp"
            android:hint="@string/last_name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@id/etFirstNameRegister" />
        <EditText
            android:id="@+id/etEmailRegister"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="15dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@id/etLastNameRegister" />

        <EditText
            android:id="@+id/etPasswordRegister"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@id/etEmailRegister" />
        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btnRegisterRegister"
            style="@style/blueButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/mediumButtonHeight"
            android:layout_marginTop="15dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@id/etPasswordRegister"
            app:layout_constraintVertical_bias="0.398" />

        <ImageView
            android:id="@+id/facebookRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:src="@drawable/facebook_login"
            app:layout_constraintStart_toStartOf="@id/guidelineRegisterLeft"
            app:layout_constraintTop_toBottomOf="@id/btnRegisterRegister" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            app:layout_constraintBottom_toBottomOf="@id/facebookRegister"
            app:layout_constraintEnd_toEndOf="@id/facebookRegister"
            app:layout_constraintStart_toStartOf="@id/facebookRegister"
            app:layout_constraintTop_toTopOf="@id/facebookRegister" />
        <ImageView
            android:id="@+id/googleRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:src="@drawable/google_login"
            app:layout_constraintEnd_toEndOf="@id/guidelineRegisterRight"
            app:layout_constraintTop_toBottomOf="@id/btnRegisterRegister" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google"
            app:layout_constraintBottom_toBottomOf="@id/googleRegister"
            app:layout_constraintEnd_toEndOf="@id/googleRegister"
            app:layout_constraintStart_toStartOf="@id/googleRegister"
            app:layout_constraintTop_toTopOf="@id/googleRegister" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRegisterLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRegisterRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>