<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blurry_background"
        android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:drawablePadding="6dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_app_shape"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLetsLogin"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/let_s_login"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/tvAppName" />

        <TextView
            android:id="@+id/tvDontHaveAnAccount"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/don_t_have_an_account_register_now"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/tvLetsLogin" />

        <EditText
            android:id="@+id/etEmailLogin"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/tvDontHaveAnAccount" />

        <EditText
            android:id="@+id/etPasswordLogin"
            style="@style/editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/etEmailLogin" />

        <TextView
            android:id="@+id/tvForgotPasswordLogin"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/etPasswordLogin" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btnLoginLogin"
            style="@style/blueButtonStyle"
            android:layout_width="0dp"
            android:layout_height="@dimen/mediumButtonHeight"
            android:layout_marginTop="15dp"
            android:text="@string/login"
            app:spinning_bar_color="@color/white"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPasswordLogin"
            app:layout_constraintVertical_bias="0.398" />

        <ImageView
            android:id="@+id/facebookLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:src="@drawable/facebook_login"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/btnLoginLogin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            app:layout_constraintBottom_toBottomOf="@id/facebookLogin"
            app:layout_constraintEnd_toEndOf="@id/facebookLogin"
            app:layout_constraintStart_toStartOf="@id/facebookLogin"
            app:layout_constraintTop_toTopOf="@id/facebookLogin" />
        <ImageView
            android:id="@+id/googleRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:src="@drawable/google_login"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintTop_toBottomOf="@id/btnLoginLogin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google"
            app:layout_constraintBottom_toBottomOf="@id/googleRegister"
            app:layout_constraintEnd_toEndOf="@id/googleRegister"
            app:layout_constraintStart_toStartOf="@id/googleRegister"
            app:layout_constraintTop_toTopOf="@id/googleRegister" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>