<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <TextView
        android:id="@+id/tvResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/poppins_thin"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <TextView
        android:id="@+id/tvResetPasswordText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/we_will_send_you_a_link_to_reset_your_password_to_your_email"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvResetPassword"
        app:layout_constraintTop_toBottomOf="@id/tvResetPassword"/>
    
    <EditText
        android:id="@+id/etResetPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@id/tvResetPasswordText"
        app:layout_constraintStart_toStartOf="@id/tvResetPasswordText"
        app:layout_constraintTop_toBottomOf="@id/tvResetPasswordText"
        tools:ignore="TextFields" />
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/etResetPassword"
        app:layout_constraintStart_toStartOf="@id/etResetPassword"
        app:layout_constraintTop_toBottomOf="@id/etResetPassword">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancelResetPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_white_background"
            android:text="@string/cancel"
            android:textAllCaps="false"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSendResetPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/blue_background"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textAllCaps="false"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>