<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blurry_background"
        android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h3"
            android:layout_marginTop="120dp"
            android:drawablePadding="6dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/app_name"
            app:drawableStartCompat="@drawable/ic_app_shape" />

        <TextView
            android:id="@+id/tvRightAddressForShopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h4"
            android:layout_marginTop="45dp"
            android:text="@string/rightAddress"
            android:textAlignment="center"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvQuality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            android:text="@string/quality"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@id/tvRightAddressForShopping"
            app:layout_constraintEnd_toEndOf="@id/tvRightAddressForShopping"
            app:layout_constraintTop_toBottomOf="@id/tvRightAddressForShopping"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegisterAccountOptions"
            style="@style/blueButtonStyle"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="@dimen/mediumButtonHeight"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tvQuality"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="@id/tvQuality"
            app:layout_constraintTop_toBottomOf="@id/tvQuality"
            app:layout_constraintVertical_bias="0.398" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLoginAccountOptions"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="@dimen/mediumButtonHeight"
            android:text="@string/login"
            android:layout_marginTop="10dp"
            style="@style/whiteButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/btnRegisterAccountOptions"
            app:layout_constraintStart_toStartOf="@id/tvQuality"
            app:layout_constraintEnd_toEndOf="@id/tvQuality"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>