<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/g_white"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <View
            android:id="@+id/topLine"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/ivBillingCartProduct"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/topLine"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop"
            android:src="@color/g_blue"/>

        <TextView
            android:id="@+id/tvProductCartName"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/chair"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/ivBillingCartProduct"
            app:layout_constraintTop_toTopOf="@id/ivBillingCartProduct"
            android:lines="1" />



        <TextView
            android:id="@+id/tvProductCartPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/_1600"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tvProductCartName"
            app:layout_constraintTop_toBottomOf="@id/tvProductCartName"
            tools:ignore="SmallSp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivBillingCartProductColor"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="5dp"
            android:src="@color/g_blue"
            app:layout_constraintStart_toStartOf="@id/tvProductCartPrice"
            app:layout_constraintTop_toBottomOf="@id/tvProductCartPrice"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivBillingCartProductSize"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="5dp"
            android:src="@color/g_blue_gray200"
            app:layout_constraintStart_toEndOf="@id/ivBillingCartProductColor"
            app:layout_constraintTop_toTopOf="@id/ivBillingCartProductColor"/>



        <TextView
            android:id="@+id/tvCartProductSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s"
            android:textSize="11sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/ivBillingCartProductSize"
            app:layout_constraintTop_toTopOf="@id/ivBillingCartProductSize"
            app:layout_constraintStart_toStartOf="@id/ivBillingCartProductSize"
            app:layout_constraintEnd_toEndOf="@id/ivBillingCartProductSize"/>

        <TextView
            android:id="@+id/tvBillingProductQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/_1"
            android:layout_marginEnd="5dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>