<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/g_white"
    app:cardElevation="0dp">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
            android:id="@+id/ivCartProduct"
            android:layout_width="80dp"
            android:layout_height="75dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@id/line"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop"
            android:src="@color/g_blue"/>
        
        <TextView
            android:id="@+id/tvCartProductName"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/chair"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/ivCartProduct"
            app:layout_constraintTop_toTopOf="@id/ivCartProduct"/>

        <TextView
            android:id="@+id/tvCartProductPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/_1600"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tvCartProductName"
            app:layout_constraintTop_toBottomOf="@id/tvCartProductName"/>

        <ImageView
            android:id="@+id/minusIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="1dp"
            android:src="@drawable/ic_minus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/plusIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_plus"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvCartProductQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            app:layout_constraintTop_toBottomOf="@id/plusIcon"
            app:layout_constraintBottom_toTopOf="@id/minusIcon"
            app:layout_constraintStart_toStartOf="@id/plusIcon"
            app:layout_constraintEnd_toEndOf="parent"/>
        
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivCartProductColor"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="5dp"
            android:src="@color/g_blue"
            app:layout_constraintStart_toStartOf="@id/tvCartProductPrice"
            app:layout_constraintTop_toBottomOf="@id/tvCartProductPrice"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivCartProductSize"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="5dp"
            android:src="@color/g_blue_gray200"
            app:layout_constraintStart_toEndOf="@id/ivCartProductColor"
            app:layout_constraintTop_toTopOf="@id/ivCartProductColor"/>


        <TextView
            android:id="@+id/tvCartProductSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s"
            android:textSize="11sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/ivCartProductSize"
            app:layout_constraintTop_toTopOf="@id/ivCartProductSize"
            app:layout_constraintStart_toStartOf="@id/ivCartProductSize"
            app:layout_constraintEnd_toEndOf="@id/ivCartProductSize"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>